# TempMonitoring_Project

./: .gitignore  README.md
arch/: Dynamicarch.puml  notes.md  static_arch.puml
requirements/: embedded_task (002).docx
sw/: CMakeLists.txt  hello.c  makefile
sw-cpp/: CMakeLists.txt
sw-cpp/include/: adcsampling.hpp  read_hwvariation.hpp  tempMonitor.hpp
sw-cpp/src/: adcsampling.cpp  runTempMonitoring.cpp  tempMonitor.cpp
sw/include/: adcsampling.h  read_hwvariation.h  tempMonitor.h
sw/src/: adcsampling.c  hello.c  runTempMonitoring.c  tempMonitor.c
